bugfix: wrong color on sidebar icons

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -17,7 +17,7 @@
 
 .sidebar-container button .material-icons {
     font-size: 2rem;
-    color: var(--accent);
+    color: var(--accent-bright);
     opacity: 0.8;
 }
 
